src/tests/snapshots/molt__tests__expr__match___call.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (call))"
---
note: Match
   ┌─ "test_data/expr/main.rs":15:15
   │
15 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^^^^^^^ $expr
   │
   = $e = bar.baz()
