src/tests/snapshots/molt__tests__expr__match___cast.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (cast))"
---
note: Match
   ┌─ "test_data/expr/main.rs":47:5
   │
47 │     (1 + 2) as usize;
   │     ^^^^^^^^^^^^^^^^ $expr
   │
   = $e = (1 + 2)
