src/tests/snapshots/molt__tests__expr__match___expr.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (expr))"
---
note: Match
  ┌─ "test_data/expr/main.rs":2:6
  │
2 │     (x+1);
  │      ^ $x

note: Match
  ┌─ "test_data/expr/main.rs":2:8
  │
2 │     (x+1);
  │        ^ $x

note: Match
  ┌─ "test_data/expr/main.rs":2:6
  │
2 │     (x+1);
  │      ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":2:5
  │
2 │     (x+1);
  │     ^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":6:5
  │
6 │     foo.bar;
  │     ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":6:5
  │
6 │     foo.bar;
  │     ^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":8:11
  │
8 │     match x {
  │           ^ $x

note: Match
  ┌─ "test_data/expr/main.rs":9:9
  │
9 │         foo..bar => {},
  │         ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":9:14
  │
9 │         foo..bar => {},
  │              ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":9:21
  │
9 │         foo..bar => {},
  │                     ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":10:11
   │
10 │         ..bar => {},
   │           ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":10:18
   │
10 │         ..bar => {},
   │                  ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":11:15
   │
11 │         .. => {},
   │               ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":12:16
   │
12 │         'a' => {},
   │                ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":8:5
   │  
 8 │ ╭     match x {
 9 │ │         foo..bar => {},
10 │ │         ..bar => {},
11 │ │         .. => {},
12 │ │         'a' => {},
13 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:15
   │
15 │     let foo = bar.baz().bla().qux();
   │               ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:15
   │
15 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:15
   │
15 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:15
   │
15 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":16:5
   │
16 │     foo = 10;
   │     ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":16:11
   │
16 │     foo = 10;
   │           ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":16:5
   │
16 │     foo = 10;
   │     ^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":19:9
   │
19 │         foo();
   │         ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":19:9
   │
19 │         foo();
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":22:8
   │
22 │     if cond1 {
   │        ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":23:9
   │
23 │         expr1
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":24:15
   │
24 │     } else if cond2 {
   │               ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":25:9
   │
25 │         expr2
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":26:15
   │
26 │     } else if cond3 {
   │               ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":27:9
   │
27 │         expr3
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":28:15
   │
28 │     } else if cond4 {
   │               ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":29:9
   │
29 │         expr4
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":31:9
   │
31 │         expr5
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":30:12
   │  
30 │       } else {
   │ ╭────────────^
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":28:12
   │  
28 │       } else if cond4 {
   │ ╭────────────^
29 │ │         expr4
30 │ │     } else {
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":26:12
   │  
26 │       } else if cond3 {
   │ ╭────────────^
27 │ │         expr3
28 │ │     } else if cond4 {
29 │ │         expr4
30 │ │     } else {
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":24:12
   │  
24 │       } else if cond2 {
   │ ╭────────────^
25 │ │         expr2
26 │ │     } else if cond3 {
27 │ │         expr3
   · │
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":22:5
   │  
22 │ ╭     if cond1 {
23 │ │         expr1
24 │ │     } else if cond2 {
25 │ │         expr2
   · │
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":34:5
   │
34 │     bar().await;
   │     ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":34:5
   │
34 │     bar().await;
   │     ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":34:5
   │
34 │     bar().await;
   │     ^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":36:12
   │
36 │     return Ok(foo);
   │            ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":36:15
   │
36 │     return Ok(foo);
   │               ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":36:12
   │
36 │     return Ok(foo);
   │            ^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":36:5
   │
36 │     return Ok(foo);
   │     ^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":38:16
   │
38 │     for foo in bar.baz() {
   │                ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":38:16
   │
38 │     for foo in bar.baz() {
   │                ^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":38:5
   │  
38 │ ╭     for foo in bar.baz() {
39 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":42:18
   │
42 │ const FOO: [Foo; 3] = [Foo, Foo, Foo];
   │                  ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":42:24
   │
42 │ const FOO: [Foo; 3] = [Foo, Foo, Foo];
   │                        ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":42:29
   │
42 │ const FOO: [Foo; 3] = [Foo, Foo, Foo];
   │                             ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":42:34
   │
42 │ const FOO: [Foo; 3] = [Foo, Foo, Foo];
   │                                  ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":42:23
   │
42 │ const FOO: [Foo; 3] = [Foo, Foo, Foo];
   │                       ^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:6
   │
45 │     (1 + 2) + (3 + 4);
   │      ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:10
   │
45 │     (1 + 2) + (3 + 4);
   │          ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:6
   │
45 │     (1 + 2) + (3 + 4);
   │      ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:16
   │
45 │     (1 + 2) + (3 + 4);
   │                ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:20
   │
45 │     (1 + 2) + (3 + 4);
   │                    ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:16
   │
45 │     (1 + 2) + (3 + 4);
   │                ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:5
   │
45 │     (1 + 2) + (3 + 4);
   │     ^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:15
   │
45 │     (1 + 2) + (3 + 4);
   │               ^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:5
   │
45 │     (1 + 2) + (3 + 4);
   │     ^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":47:6
   │
47 │     (1 + 2) as usize;
   │      ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":47:10
   │
47 │     (1 + 2) as usize;
   │          ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":47:6
   │
47 │     (1 + 2) as usize;
   │      ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":47:5
   │
47 │     (1 + 2) as usize;
   │     ^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":47:5
   │
47 │     (1 + 2) as usize;
   │     ^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":49:19
   │
49 │     let x = |bar| bar + 1;
   │                   ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":49:25
   │
49 │     let x = |bar| bar + 1;
   │                         ^ $x

note: Match
   ┌─ "test_data/expr/main.rs":49:19
   │
49 │     let x = |bar| bar + 1;
   │                   ^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":49:13
   │
49 │     let x = |bar| bar + 1;
   │             ^^^^^^^^^^^^^ $x
