src/tests/snapshots/molt__tests__expr__match___field_access.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (field_access))"
---
note: Match
  ┌─ "test_data/expr/main.rs":6:5
  │
6 │     foo.bar;
  │     ^^^^^^^ $expr
  │
  = $e = foo
