src/tests/snapshots/molt__tests__expr__match___if_.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (if_))"
---
note: Match
   ┌─ "test_data/expr/main.rs":28:12
   │  
28 │       } else if cond4 {
   │ ╭────────────^
29 │ │         expr4
30 │ │     } else {
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $expr
   │  
   = $cond = cond4
   = $else_ = expr5
   = $then = expr4
