src/tests/snapshots/molt__tests__expr__match___return_.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (return_))"
---
note: Match
   ┌─ "test_data/expr/main.rs":36:5
   │
36 │     return Ok(foo);
   │     ^^^^^^^^^^^^^^ $e1
   │
   = $e2 = Ok(foo)
