src/tests/snapshots/molt__tests__expr__match___stmts.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (stmts))"
---
note: Match
  ┌─ "test_data/expr/main.rs":2:5
  │
2 │     (x+1);
  │     ^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":6:5
  │
6 │     foo.bar;
  │     ^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":8:5
   │  
 8 │ ╭     match x {
 9 │ │         foo..bar => {},
10 │ │         ..bar => {},
11 │ │         .. => {},
12 │ │         'a' => {},
13 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:5
   │
15 │     let foo = bar.baz().bla().qux();
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":16:5
   │
16 │     foo = 10;
   │     ^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":19:9
   │
19 │         foo();
   │         ^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":18:5
   │  
18 │ ╭     fn inner() {
19 │ │         foo();
20 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":23:9
   │
23 │         expr1
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":25:9
   │
25 │         expr2
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":27:9
   │
27 │         expr3
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":29:9
   │
29 │         expr4
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":31:9
   │
31 │         expr5
   │         ^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":22:5
   │  
22 │ ╭     if cond1 {
23 │ │         expr1
24 │ │     } else if cond2 {
25 │ │         expr2
   · │
31 │ │         expr5
32 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":34:5
   │
34 │     bar().await;
   │     ^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":36:5
   │
36 │     return Ok(foo);
   │     ^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":38:5
   │  
38 │ ╭     for foo in bar.baz() {
39 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":45:5
   │
45 │     (1 + 2) + (3 + 4);
   │     ^^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":47:5
   │
47 │     (1 + 2) as usize;
   │     ^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":49:5
   │
49 │     let x = |bar| bar + 1;
   │     ^^^^^^^^^^^^^^^^^^^^^^ $x
